# Replica

./: Cargo.toml  LICENSE  README.md  hello.replica
.github/workflows/: rust.yml
docs/: SpecificationCandidate.md
resources/: ActorModel+ImmidiateInit.replica  ActorModel+MutableVar.replica  ActorModel.replica  BasicSyntax.replica  SingleActor+Copy2DistributedActor.replica  SingleActor+KVS.replica  SingleActor.replica
src/: ast.rs  codegen.rs  lexer.rs  main.rs  ownership.rs  parser.rs  semantic.rs
src/codegen/: error.rs  expression.rs  generator.rs  mod.rs  type_converter.rs
